@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-05-08T01:11:38Z",
+  "count" : 0,
+  "count_minmax" : [ 0, 0 ],
+  "count_prev_day_inc" : 9,
+  "count_prev_day_dec" : 0,
+  "uniques" : 0,
+  "uniques_minmax" : [ 0, 0 ],
+  "uniques_prev_day_inc" : 6,
+  "uniques_prev_day_dec" : 0
+}
