@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-07T01:09:31Z",
+  "timestamp" : "2022-05-08T01:11:38Z",
   "count_outdated" : 259,
   "uniques_outdated" : 137,
-  "count" : 266,
-  "uniques" : 144,
+  "count" : 275,
+  "uniques" : 150,
   "clones" : [
     {
       "timestamp": "2022-04-24T00:00:00Z",
@@ -53,6 +53,13 @@
       "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-07T00:00:00Z",
+      "count": 9,
+      "count_minmax": [ 0, 9 ],
+      "uniques": 6,
+      "uniques_minmax": [ 0, 6 ]
     }
   ]
 }
