@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 3,
+  "count": 16,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-04-24T00:00:00Z",
@@ -36,6 +36,11 @@
       "timestamp": "2022-05-06T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-07T00:00:00Z",
+      "count": 9,
+      "uniques": 6
     }
   ]
 }
