@@ -1,3 +1,9 @@
+2022-05-08T01:11:38Z:
+* notice: last 14d: all unq: 16 8
+* notice: prev accum: outdated-all outdated-unq / all unq: 259 137 / 266 144
+* notice: next accum: outdated-all outdated-unq / all unq: 259 137 / 275 150
+* notice: prev json diff // prev day diff: unq all: +6 +9 / -0 -0 // +6 +9 / -0 -0
+
 2022-05-07T01:09:31Z:
 * notice: last 14d: all unq: 7 3
 * notice: prev accum: outdated-all outdated-unq / all unq: 259 137 / 265 143
